--- a/public/index.html
+++ b/public/index.html
@@ -1,72 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Application</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-
-        function joinChat() {
-            const username = document.getElementById('username').value;
-            if (username) {
-                socket.emit('join', username);
-                document.getElementById('join-screen').style.display = 'none';
-                document.getElementById('chat-screen').style.display = 'block';
-            }
+    <title>Chat App - Room Selection</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
         }
-
-        function sendMessage(e) {
-            e.preventDefault();
-            const messageInput = document.getElementById('message');
-            const message = messageInput.value;
-            if (message) {
-                socket.emit('chat message', message);
-                messageInput.value = '';
-            }
+        .container {
+            text-align: center;
+            background: #fff;
+            padding: 30px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
-
-        socket.on('chat message', function(data) {
-            const messages = document.getElementById('messages');
-            const item = document.createElement('li');
-            item.textContent = `${data.user}: ${data.message}`;
-            messages.appendChild(item);
-            window.scrollTo(0, document.body.scrollHeight);
-        });
-
-        socket.on('user joined', function(user) {
-            const messages = document.getElementById('messages');
-            const item = document.createElement('li');
-            item.textContent = `${user} has joined the chat.`;
-            item.classList.add('system');
-            messages.appendChild(item);
-        });
-
-        socket.on('user left', function(user) {
-            const messages = document.getElementById('messages');
-            const item = document.createElement('li');
-            item.textContent = `${user} has left the chat.`;
-            item.classList.add('system');
-            messages.appendChild(item);
-        });
-    </script>
+        h1 {
+            color: #333;
+        }
+        button, input {
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            outline: none;
+            cursor: pointer;
+        }
+        button {
+            background-color: #28a745;
+            color: white;
+            border: none;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        input {
+            width: 70%;
+        }
+    </style>
 </head>
 <body>
-    <div id="join-screen">
-        <h2>Join Chat</h2>
-        <input id="username" type="text" placeholder="Enter your name" />
-        <button onclick="joinChat()">Join</button>
-    </div>
+    <h1>Welcome to the Chat App</h1>
 
-    <div id="chat-screen" style="display:none;">
-        <h3>Chat Room</h3>
-        <ul id="messages"></ul>
-        <form onsubmit="sendMessage(event)">
-            <input id="message" type="text" placeholder="Type a message..." />
-            <button type="submit">Send</button>
-        </form>
-    </div>
+    <!-- Create Room -->
+    <button onclick="createRoom()">Create a Chat Room</button>
+
+    <!-- Join Room -->
+    <h2>Join a Chat Room</h2>
+    <form onsubmit="joinRoom(event)">
+        <input id="room-code" type="text" placeholder="Enter Room Code" required />
+        <button type="submit">Join Room</button>
+    </form>
+
+    <script>
+        function createRoom() {
+            const roomCode = Math.random().toString(36).substring(2, 8); // Generate a 6-character room code
+            window.location.href = `/chat.html?room=${roomCode}`; // Redirect to chat room
+        }
+
+        function joinRoom(event) {
+            event.preventDefault();
+            const roomCode = document.getElementById('room-code').value;
+            window.location.href = `/chat.html?room=${roomCode}`; // Redirect to the chat room
+        }
+    </script>
 </body>
 </html>
