--- a/public/chat.html
+++ b/public/chat.html
@@ -1,99 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Room</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="chatContainer">
+        <div id="messages"></div>
+        <input id="messageInput" placeholder="Type your message here..." />
+        <button id="sendMessage">Send</button>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
-        const room = urlParams.get('room'); // Get room code from the URL
-
+        const roomName = urlParams.get('room');
+        const username = prompt("Enter your username:");
         const socket = io();
 
-        // Join the specific room
-        socket.emit('joinRoom', room);
+        socket.emit('joinRoom', { room: roomName, username: username });
 
-        function sendMessage(event) {
-            event.preventDefault();
-            const input = document.getElementById('message-input');
-            const msg = input.value;
-            socket.emit('chat message', { room, msg }); // Send message to the server, with the room information
-            input.value = '';
-        }
-
-        socket.on('chat message', (msg) => {
-            const item = document.createElement('li');
-            item.textContent = msg;
-            document.getElementById('messages').appendChild(item);
+        socket.on('message', (msg) => {
+            const messagesDiv = document.getElementById('messages');
+            messagesDiv.innerHTML += `<p>${msg}</p>`;
         });
-    </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            margin: 0;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            background-color: #007bff;
-            color: white;
-            padding: 15px;
-            margin: 0;
-            text-align: center;
-        }
-        #messages {
-            flex-grow: 1;
-            padding: 20px;
-            list-style: none;
-            margin: 0;
-            overflow-y: scroll;
-            background-color: #fff;
-            border-top: 1px solid #ccc;
-        }
-        #messages li {
-            padding: 10px;
-            margin-bottom: 10px;
-            background-color: #e9ecef;
-            border-radius: 5px;
-        }
-        form {
-            display: flex;
-            border-top: 1px solid #ccc;
-            padding: 10px;
-            background-color: #fff;
-        }
-        input {
-            flex-grow: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            outline: none;
-        }
-        button {
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin-left: 10px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
-</head>
-<body>
-    <h1>Room: <span id="room-name"></span></h1>
-    <ul id="messages"></ul>
-    <form onsubmit="sendMessage(event)">
-        <input id="message-input" autocomplete="off" /><button>Send</button>
-    </form>
 
-    <script>
-        // Display the room name
-        document.getElementById('room-name').textContent = room;
+        document.getElementById('sendMessage').onclick = () => {
+            const messageInput = document.getElementById('messageInput');
+            const message = messageInput.value;
+            socket.emit('message', { room: roomName, message: message, username: username });
+            messageInput.value = ''; // Clear input after sending
+        };
     </script>
 </body>
 </html>
