--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <button type="submit">Create Room</button>
         </form>
         <form id="joinRoomForm">
-            <input type="text" id="joinRoomName" placeholder="Enter Room Code" required>
+            <input type="text" id="joinRoomCode" placeholder="Enter Room Code" required>
             <input type="text" id="joinUsername" placeholder="Enter Your Username" required>
             <button type="submit">Join Room</button>
         </form>
